Revision history for Perl extension Email::Simple

{{$NEXT}}

2.202     2013-09-04 09:48:33 America/New_York
          repackage with Dist::Zilla; update repo and bug tracker

2.201     2013-04-16
          no changes

2.200_01  2013-04-09
          preserve the original header layout unless changed

2.103     2013-04-09
          fix a bug in header unfolding where "0\n 1" could be unfolded to "01"

2.102     2012-07-13
          recognize crlf correctly even if there is no body (thanks, Christian
          Walde)

2.101     2011-12-23
          remove instruction to use ::Creator instead of just ->create

          documentation improvements (thanks, Michael Stevens)

2.100     2009-11-03
          merge Email-Simple-Creator into Email-Simple distribution

2.005     2009-01-22
          add repository metadata

2.004     2008-06-25
          publicize default_header_class method
          remove the long-deprecated Headers.pm

2.003     2007-07-19
          improve tests, for 5.5 compat
          remove conditional circular prereq on Email::MIME, replace it with a
          warning and delay

2.002     2007-07-14
          change initialization order to unbreak Email::MIME
          do not return ->body from ->body_set to simplify subclass behavior

2.001     2007-07-13
          fix t/perl-minver.t to properly skip if T::MV not installed
          retroactively set 2.000 release date!

2.000     2007-07-13
          huge improvement to speed of bodyless message parsing
            pointed out by Dan Dascalescu; thanks!
          more documentation of header class
          new Header crlf defaults to real CRLF
          fix tests to avoid requiring 5.6

1.999     2007-03-20
          fix bug 25496: deletion of headers affected the wrong range,
            sometimes deleting too many headers -- thanks, Nicholas Oxhoej!
          fix bug 24922: errant space in last header of CRLF-delim email
            thanks, Barry Downes and Alex Vandiver

1.998     2007-02-07