@@ -12,9 +12,16 @@ sub _date_header {
   Email::Date::Format::email_date();
 }
 
+our @CARP_NOT = qw(Email::Simple Email::MIME);
+
 sub _add_to_header {
   my ($class, $header, $key, $value) = @_;
   $value = '' unless defined $value;
+
+  if ($value =~ s/[\x0a\x0b\x0c\x0d\x85\x{2028}\x{2029}]+/ /g) {
+    Carp::carp("replaced vertical whitespace in $key header with space; this will become fatal in a future version");
+  }
+
   $$header .= "$key: $value" . $class->_crlf;
 }
 
