@@ -1,6 +1,8 @@
 Revision history for Perl extension Email::Simple
 
 {{$NEXT}}
+        - translate vertical whitespace in headers into horizontal whitespace,
+          with a warning
 
 2.202     2013-09-04 09:48:33 America/New_York
           repackage with Dist::Zilla; update repo and bug tracker
